tests/test_proof/bad/dates_get_year-empty.catala_en
## Test

```catala
declaration scope A:
  input x content date
  output y content boolean

scope A:
  definition x equals |2022-01-16|
  definition y under condition get_year of x < 2010 consequence equals true
  definition y under condition get_year of x >= 2010 and get_year of x < 2015 consequence equals false
  definition y under condition get_year of x >= 2015 and get_year of x < 2020 consequence equals true
  definition y under condition get_year of x > 2020 consequence equals false
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[ERROR]
It is impossible to give a definition to a scope variable tagged as input.

Incriminated variable:
┌─⯈ tests/test_proof/bad/dates_get_year-empty.catala_en:5.9-5.10:
└─┐
5 │   input x content date
  │         ‾
  └─ Test

Incriminated variable definition:
┌─⯈ tests/test_proof/bad/dates_get_year-empty.catala_en:9.3-9.15:
└─┐
9 │   definition x equals |2022-01-16|
  │   ‾‾‾‾‾‾‾‾‾‾‾‾
#return code 123#
```
